# xboxana

./: .gitignore  CMakeLists.txt  README.md  config  env_config
analyses/: CMakeLists.txt
analyses/include/: XboxAlgorithms.h  XboxAnalyserBreakdownRate.hxx  XboxAnalyserEntry.hxx  XboxAnalyserEvalBase.hxx  XboxAnalyserEvalBreakdown.hxx  XboxAnalyserEvalBreakdownTest.hxx  XboxAnalyserEvalDeviation.hxx  XboxAnalyserEvalJitter.hxx  XboxAnalyserEvalPulseShape.hxx  XboxAnalyserEvalRisingEdge.hxx  XboxAnalyserEvalSignal.hxx  XboxAnalyserLinkDef.h  XboxAnalyserResult.hxx  XboxAnalyserView.hxx  XboxCubicSpline.hxx  XboxSignalFilter.hxx  spline.h  spline_eigen.h_  thomas.py
analyses/src/: XboxAnalyserBreakdownRate.cxx  XboxAnalyserEntry.cxx  XboxAnalyserEvalBase.cxx  XboxAnalyserEvalBreakdown.cxx  XboxAnalyserEvalBreakdownTest.cxx  XboxAnalyserEvalDeviation.cxx  XboxAnalyserEvalJitter.cxx  XboxAnalyserEvalPulseShape.cxx  XboxAnalyserEvalRisingEdge.cxx  XboxAnalyserEvalSignal.cxx  XboxAnalyserResult.cxx  XboxAnalyserView.cxx  XboxAnalyserViewPlots.cxx  XboxCubicSpline.cxx  XboxSignalFilter.cxx
analyses/test/: CMakeLists.txt  test_AnalyseHistory.cpp  test_AnalyseHistory3.cpp  test_AnalyseHistory4.cpp  test_AnalysisAlex.cpp  test_AnalysisDefault.cpp  test_AnalysisEvaluators.cpp  test_AnalysisPolarix.cpp  test_AnalysisViewDefault.cpp  test_AnalysisViewPolarix.cpp  test_AnalysisXiaowei.cpp  test_RDataFrames.cpp  test_Spline.cpp
apps/: CMakeLists.txt
apps/converter/: CMakeLists.txt
apps/converter/include/: QXboxFileConverter.hxx
apps/converter/src/: QXboxFileConverter.cxx  QXboxFileConverterApp.cxx  XboxTdms2Root.cpp
apps/converter/test/: CMakeLists.txt
apps/test/canvas/: CMakeLists.txt  canvas.cxx  test_canvas.cxx
apps/test/test1/: CMakeLists.txt  Makefile  piechartcustomization
apps/test/test2/: CMakeLists.txt
apps/test/viewer/: CMakeLists.txt  QXboxBrushTool.cxx  QXboxCustomSlice.cxx  QXboxDataViewer.cxx  QXboxDataViewerApp.cxx  QXboxPenTool.cxx
apps/test/viewer/include/: QXboxBrushTool.hxx  QXboxCustomSlice.hxx  QXboxDataViewer.hxx  QXboxPenTool.hxx
apps/webconverter/: CMakeLists.txt
apps/webconverter/controller/: ConverterPanel.controller.js
apps/webconverter/deprecated/controller1/: ConverterPanel.controller.js
apps/webconverter/deprecated/controller_/: ConverterPanel.controller.js
apps/webconverter/deprecated/view1/: ConverterPanel.view.xml
apps/webconverter/deprecated/view_/: ConverterPanel.view.xml  ConverterPanel0.xml  ConverterPanel1.view.xml  FitFunctionPanel.view.xml  Logging.view.xml  SetParameters.fragment.xml  Settings.view.xml
apps/webconverter/include/: ConverterPanel.hxx  XboxTdmsConverter.hxx
apps/webconverter/macros/: getSubDirectories.C  rootlogon.C  runConverterPanel.C
apps/webconverter/src/: ConverterPanel.cxx  XboxTdmsConverter.cxx
apps/webconverter/view/: ConverterPanel.view.xml
cmake/modules/: FindQt5_.cmake  FindROOT.cmake  ROOTMacros.cmake  SearchInstalledSoftware.cmake  SearchInstalledSoftware_AdditionalPackages.cmake  XBOXBuildOptions.cmake  XBOXCTest.cmake  XBOXConfiguration.cmake  XBOXInstallDirs.cmake  XBOXMacros.cmake  XBOXTestDriver.cmake
core/: CMakeLists.txt  CMakeLists_test.txt
core/xboxbase/: CMakeLists.txt
core/xboxbase/include/: XboxAPI.h  XboxDataType.hxx  XboxDataTypeLinkDef.h  XboxFileSystem.h
core/xboxbase/src/: XboxDataType.cxx
core/xboxchannel/: CMakeLists.txt
core/xboxchannel/include/: XboxDAQChannel.hxx  XboxDAQChannelLinkDef.h
core/xboxchannel/src/: XboxDAQChannel.cxx
core/xboxchannel/test/: CMakeLists.txt
io/: CMakeLists.txt
io/converter/: CMakeLists.txt
io/converter/include/: XboxFileConverter.hxx  XboxTdmsFileConverter.hxx
io/converter/src/: XboxFileConverter.cxx  XboxTdmsFileConverter.cxx  XboxTdmsFileConverterSpecifics.cxx
io/converter/test/: CMakeLists.txt  test_XboxFileConverter.cpp  test_XboxTdmsFileConverter.cpp
io/hdf5/: CMakeLists.txt
io/hdf5/include/: XboxH5File.hxx
io/hdf5/src/: XboxH5File.cxx
io/hdf5/test/: CMakeLists.txt  test_XboxHdf5Export.cpp
io/tdms/: CMakeLists.txt
io/tdms/include/: Tdms.h  TdmsChannel.hxx  TdmsDataType.hxx  TdmsFile.hxx  TdmsGroup.hxx  TdmsIfstream.hxx  TdmsObject.hxx
io/tdms/src/: TdmsChannel.cxx  TdmsDataType.cxx  TdmsFile.cxx  TdmsGroup.cxx  TdmsObject.cxx
io/tdms/test/: CMakeLists.txt  test_TdmsFile.cpp
macros/: analyseBDLocation.C  analyseXBox3_TD24_BO.C  init.C  listFiles.C  readFiles.C  rootlogon.C  testclass.C  testclass.hxx
notebooks/: histogramm.ipynb
python/: load_rootfile.py
test/: CMakeLists.txt  Example_BoostFilesystem.cpp  Makefile0  main.cpp  noisefilter.cpp  test.cpp  testclass.cpp  testclass.cxx  testclassLinkDef.h
